--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "react-scripts test --verbose",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
